--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-course-module-react",
+  "name": "js-course-project-internet-shop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
